schema/testdata/errors/set_attribute_ctx_identity_invalid_fields.keel
model UserExtension {
    fields {
        unknown Text
    }

    actions {
        create createExt() {
            //expect-error:30:31:AttributeExpressionError:undefined field 'unknown'
            @set(userExtension.unknown = ctx.identity.unknown)
        }
        update updateExt(id) {
            //expect-error:30:31:AttributeExpressionError:undefined field 'unknown'
            @set(userExtension.unknown = ctx.identity.unknown)
        }
    }
}
